@@ -32,7 +32,7 @@ public:
 	             : xmltree(new XMLnode(root)), rootname(root), filename(), is_file(false)
 		{ if(fname.size()) read_config_file(fname); }
 
-	~Configuration() { delete xmltree; };
+	~Configuration() { if(xmltree!=0) delete xmltree; };
 	
 	bool	read_config_file(const std::string input_filename, const std::string root=std::string());
 	
