@@ -1,3 +1,6 @@
+2002-05-28  Darke <darkepaw@users.sourceforge.net>
+	* conf/Configuration.*, tools/cmanip.cc: Fixed segfault in cmanip.
+
 2002-05-27  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* objs/objiter.h (public): Iterators to get all objects recursively.
